fixed card spacing

--- a/scss/_customs.scss
+++ b/scss/_customs.scss
@@ -1,6 +1,7 @@
 // menu 
 $primary: rgba(167, 139, 250);
 $secondary: rgba(17, 24, 39, 1);
+$info: #333e48;
 
 .menu-items {
     --bs-nav-link-color: black ;
