--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,5 @@
 
 
 // product filter
-.filter {
-    width: 300px;
-}
+
 // TESSSST
